corrected aligned containers

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,3 +9,8 @@ button {
     border-radius: 3em;
     margin-top: 5px;
 }
+
+form #search-form.list-group {
+    padding-bottom: 2px;
+    border-bottom: 2px solid black ;
+}
